fix: v2 compatibility - update test flows with Flow trigger and Discord webhook